fix transparent menu on mobile

--- a/DeskDexCore/wwwroot/css/style.css
+++ b/DeskDexCore/wwwroot/css/style.css
@@ -24,7 +24,15 @@ a:hover {
 }
 .full-viewport {
     min-height: 100vh;
+    padding-top: 26.5em;
+    margin-top: -15em;
 }
 .pt-8 {
     padding-top: 3rem!important;
+}
+.background-cover {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
